# msdns2zone

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: args.rs  directory.rs  enc.rs  ldap.rs  ldif.rs  main.rs  record.rs  tiny_directory.rs
src/tiny_directory/: dn.rs  mod.rs
