[package]
name = "msdns2zone"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ldap3 = { version = "0.11" }
rpassword = { version = "7.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8" }
