[package]
name = "msdns2zone"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
base32 = { version = "0.5" }
base64 = { version = "0.22" }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
clap = { version = "4.5", features = ["derive"] }
ldap3 = { version = "0.11" }
rpassword = { version = "7.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8" }
unicase = { version = "2.8" }
